examples/test/testpolicy2196.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2196
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key27: value38
      key10: value42
      key33: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value36
      podSelector:
        matchLabels:
          key1: value16
